--- a/week_1_LU_pivoting.ipynb
+++ b/week_1_LU_pivoting.ipynb
@@ -18,10 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -49,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +56,7 @@
        "6"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,10 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Tweak the printing of floating-point numbers, for clarity\n",
@@ -91,33 +87,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.     0.     0.     0.     0.     0.   ]\n",
-      " [ 1.     1.     0.     0.     0.     0.   ]\n",
-      " [ 1.     1.455  1.     0.     0.     0.   ]\n",
-      " [ 1.     1.714  1.742  1.     0.     0.   ]\n",
-      " [ 1.     1.882  2.276  2.039  1.     0.   ]\n",
-      " [ 1.     2.     2.671  2.944  2.354  1.   ]] \n",
+      "[[1.    0.    0.    0.    0.    0.   ]\n",
+      " [1.    1.    0.    0.    0.    0.   ]\n",
+      " [1.    1.455 1.    0.    0.    0.   ]\n",
+      " [1.    1.714 1.742 1.    0.    0.   ]\n",
+      " [1.    1.882 2.276 2.039 1.    0.   ]\n",
+      " [1.    2.    2.671 2.944 2.354 1.   ]] \n",
       "\n",
-      "[[  3.000e+00   3.000e+00   3.000e+00   3.000e+00   3.000e+00   3.000e+00]\n",
-      " [  0.000e+00  -1.125e+00  -1.636e+00  -1.929e+00  -2.118e+00  -2.250e+00]\n",
-      " [  0.000e+00   0.000e+00   2.625e-01   4.574e-01   5.975e-01   7.013e-01]\n",
-      " [  0.000e+00   2.220e-16   0.000e+00  -2.197e-02  -4.480e-02  -6.469e-02]\n",
-      " [  0.000e+00  -4.528e-16   0.000e+00   6.939e-18   8.080e-04   1.902e-03]\n",
-      " [  0.000e+00   4.123e-16   0.000e+00  -1.634e-17   0.000e+00  -1.585e-05]] \n",
+      "[[ 3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00]\n",
+      " [ 0.000e+00 -1.125e+00 -1.636e+00 -1.929e+00 -2.118e+00 -2.250e+00]\n",
+      " [ 0.000e+00  0.000e+00  2.625e-01  4.574e-01  5.975e-01  7.013e-01]\n",
+      " [ 0.000e+00  1.110e-16  0.000e+00 -2.197e-02 -4.480e-02 -6.469e-02]\n",
+      " [ 0.000e+00 -2.819e-16  0.000e+00  0.000e+00  8.080e-04  1.902e-03]\n",
+      " [ 0.000e+00  3.369e-16  0.000e+00 -1.541e-18  2.168e-19 -1.585e-05]] \n",
       "\n",
-      "[[  0.000e+00   0.000e+00   0.000e+00   0.000e+00   0.000e+00   0.000e+00]\n",
-      " [  0.000e+00   0.000e+00   0.000e+00   0.000e+00   0.000e+00   0.000e+00]\n",
-      " [  0.000e+00   0.000e+00   0.000e+00   2.220e-16  -1.110e-16  -1.665e-16]\n",
-      " [  0.000e+00   0.000e+00   2.220e-16  -5.551e-17  -1.665e-16  -1.665e-16]\n",
-      " [  0.000e+00   0.000e+00  -1.110e-16  -1.665e-16   1.665e-16   5.551e-17]\n",
-      " [  0.000e+00   0.000e+00  -1.665e-16  -1.665e-16   5.551e-17   0.000e+00]]\n"
+      "[[ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n",
+      " [ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n",
+      " [ 0.000e+00  0.000e+00  0.000e+00  2.220e-16 -1.110e-16 -1.665e-16]\n",
+      " [ 0.000e+00  0.000e+00  2.220e-16 -5.551e-17 -1.665e-16 -1.665e-16]\n",
+      " [ 0.000e+00  0.000e+00 -1.110e-16  2.776e-16 -2.776e-16  5.551e-17]\n",
+      " [ 0.000e+00  0.000e+00 -1.665e-16 -1.665e-16  5.551e-17  0.000e+00]]\n"
      ]
     }
    ],
@@ -147,10 +143,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 42,
+   "metadata": {},
    "outputs": [],
    "source": [
     "a1 = a.copy()\n",
@@ -166,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +169,7 @@
        "6"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,24 +180,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]] [[ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]]\n"
+      "[[nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]] [[nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:15: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  from ipykernel import kernelapp as app\n",
+      "//anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:17: RuntimeWarning: invalid value encountered in matmul\n",
+      "//anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:20: RuntimeWarning: invalid value encountered in matmul\n",
+      "//anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:15: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  from ipykernel import kernelapp as app\n"
      ]
     }
    ],
@@ -225,14 +231,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Тут просто обрезаем нашу матрицу и находим ее ведущие миноры, то есть определители этих обрезанных матриц"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Если нулевых миноров нет, то выдаем True, если есть - False "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 45,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# ... ENTER YOUR CODE HERE ..."
+    "def f(a):\n",
+    "    length = a.shape[0]\n",
+    "    for i in range(0,length):\n",
+    "        if np.linalg.det(a[:i,:i]) == 0:\n",
+    "            return False\n",
+    "    return True   "
    ]
   },
   {
@@ -251,15 +274,443 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "Посмотрим, будет ли работать наша функция для a и a1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Все нормально, и Lu разложение существует, и оно найдено выше"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f(a1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Получили False, то есть один из ведущих миноров нулевой, как и получилось выше"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Наша функция f(a) для выявления нулевых ведущих миноров работает"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Создадим теперь вспомогающие функции для составления матрицы перестановок, самой перестановок"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# ... ENTER YOUR CODE HERE ..."
+    "def change(A,j,i):\n",
+    "    A1 = A.copy()\n",
+    "    b = np.zeros_like(A[i])\n",
+    "    b = A1[i].copy()\n",
+    "    A1[i] = A1[j]\n",
+    "    A1[j] = b\n",
+    "    return A1\n",
+    "#change - матрица А, в которой i и j строки поменяны местами"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def change1(a,i,j):\n",
+    "    b = np.eye((a.shape[0]),dtype=float)\n",
+    "    b[i][i] = 0\n",
+    "    b[j][j] = 0\n",
+    "    b[i][j] = 1\n",
+    "    b[j][i] = 1\n",
+    "    return b\n",
+    "#change1 - матрица перестановок, чтобы поменять строки надо change1 умножить на a "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Матрица change1 создана для того, чтобы запомнить, какие мы перестановки совершаем"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Так как я не умею выделять из многомерного массива в конкретном срезе максимальный элемент, просто напишу функцию, которая будет это делать вместо меня"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def index_max(a):\n",
+    "    b = []\n",
+    "    b = [a[i] for i in range(0,len(a))]\n",
+    "    return b.index(max(b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Эта функция помогает мне определять индекс максималного элемента у срезанного массива"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def det(A):\n",
+    "    length = A.shape[0] #создаем размер нашей матрицы\n",
+    "    det1 = np.zeros((length,length)) #создаем многомерный массив, который будет помогать нам определять индекс строки\n",
+    "    #при которой детерминант нулевого ведущего минора будет максимальным\n",
+    "    permutation = np.eye(length) #создаем изначально единичную матрицу, которая потом будет превращаться\n",
+    "    #в матрицу перестановок\n",
+    "    for i in range(0,length):\n",
+    "        if np.linalg.det(A[:i,:i]) == 0: #находим нулевой ведущий минор\n",
+    "            for j in range(i,length):\n",
+    "                det1[i][j] = (np.absolute(np.linalg.det(change(A,i-1,j)[:i,:i]))) #после того, как нашли\n",
+    "                #наполняем наш массив значениями ведущих миноров, которые получаются при замене строк\n",
+    "            index = index_max(det1[i])#после чего находим номер строчки, при которой уже ненулевой минор \n",
+    "            #будет максимальным по модулю\n",
+    "            permutation = change1(A,i-1,index) @ permutation #после этого находим нашу матрицу перестановок\n",
+    "            #чтобы поменять нашу матрицу a1\n",
+    "    return permutation\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "После этого находим нашу преобразованную матрицу, которая уже может быть представлена в Lu виде"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def PA(A):\n",
+    "    return det(A) @ A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Сейчас мы имеем равенство \n",
+    "$Pa_{1} = Lu $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Тогда имеем: $a_{1} = P^{-1}Lu$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def P1(a): \n",
+    "    return np.linalg.inv(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "На этом написание функций закончено, и можно приступить к проверке работы этого всего"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 1.],\n",
+       "       [0., 0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 0., 1., 0.],\n",
+       "       [0., 1., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "det(a1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Получили матрицу перестановок"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.   , 3.   , 3.   , 3.   , 3.   , 3.   ],\n",
+       "       [3.   , 0.75 , 0.429, 0.3  , 0.231, 0.188],\n",
+       "       [3.   , 1.364, 0.882, 0.652, 0.517, 0.429],\n",
+       "       [3.   , 1.071, 0.652, 0.469, 0.366, 0.3  ],\n",
+       "       [3.   , 0.882, 0.517, 0.366, 0.283, 0.231],\n",
+       "       [3.   , 3.   , 1.364, 1.071, 0.882, 0.75 ]])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PA(a1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Так выглядит наша преобразованная матрица"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  1.],\n",
+       "       [ 0.,  0.,  1.,  0.,  0.,  0.],\n",
+       "       [-0., -0., -0.,  1., -0., -0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  1.,  0.],\n",
+       "       [ 0.,  1.,  0.,  0.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P1(det(a1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Нашли обратную матрицу перестановок "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Находим Lu разложение для преобразованной матрицы"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L, u = diy_lu(PA(a1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[1.000e+00, 0.000e+00, 0.000e+00, 0.000e+00, 0.000e+00, 0.000e+00],\n",
+       "        [1.000e+00, 1.000e+00, 0.000e+00, 0.000e+00, 0.000e+00, 0.000e+00],\n",
+       "        [1.000e+00, 7.273e-01, 1.000e+00, 0.000e+00, 0.000e+00, 0.000e+00],\n",
+       "        [1.000e+00, 8.571e-01, 5.807e-01, 1.000e+00, 0.000e+00, 0.000e+00],\n",
+       "        [1.000e+00, 9.412e-01, 2.529e-01, 6.797e-01, 1.000e+00, 0.000e+00],\n",
+       "        [1.000e+00, 0.000e+00, 6.611e+00, 9.937e+01, 2.597e+03, 1.000e+00]]),\n",
+       " array([[ 3.000e+00,  3.000e+00,  3.000e+00,  3.000e+00,  3.000e+00,\n",
+       "          3.000e+00],\n",
+       "        [ 0.000e+00, -2.250e+00, -2.571e+00, -2.700e+00, -2.769e+00,\n",
+       "         -2.812e+00],\n",
+       "        [ 0.000e+00,  0.000e+00, -2.475e-01, -3.842e-01, -4.688e-01,\n",
+       "         -5.260e-01],\n",
+       "        [ 0.000e+00,  1.110e-16,  0.000e+00,  6.152e-03,  1.172e-02,\n",
+       "          1.617e-02],\n",
+       "        [ 0.000e+00, -1.310e-16,  0.000e+00,  0.000e+00, -7.044e-05,\n",
+       "         -1.585e-04],\n",
+       "        [ 0.000e+00,  3.291e-13,  0.000e+00,  2.282e-17,  0.000e+00,\n",
+       "          3.202e-02]]))"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diy_lu(PA(a1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "И тогда наша искомая матрица будет равна $a_{1} = P^{-1}Lu$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.   , 3.   , 3.   , 3.   , 3.   , 3.   ],\n",
+       "       [3.   , 3.   , 1.364, 1.071, 0.882, 0.75 ],\n",
+       "       [3.   , 1.364, 0.882, 0.652, 0.517, 0.429],\n",
+       "       [3.   , 1.071, 0.652, 0.469, 0.366, 0.3  ],\n",
+       "       [3.   , 0.882, 0.517, 0.366, 0.283, 0.231],\n",
+       "       [3.   , 0.75 , 0.429, 0.3  , 0.231, 0.188]])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P1(det(a1)) @ L @ u"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Сравним теперь"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n",
+      " [ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  2.220e-16]\n",
+      " [ 0.000e+00  0.000e+00  0.000e+00  2.220e-16 -1.110e-16 -1.665e-16]\n",
+      " [ 0.000e+00  0.000e+00  2.220e-16 -5.551e-17 -1.665e-16  2.776e-16]\n",
+      " [ 0.000e+00  0.000e+00 -1.110e-16 -1.665e-16  1.665e-16 -3.886e-16]\n",
+      " [ 0.000e+00  0.000e+00 -1.665e-16 -1.665e-16  5.551e-17  0.000e+00]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(P1(det(a1))@L@u - a1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Точность неплохая получилась, и у нас все заработало!)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -278,7 +729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
