--- a/week_2_Householder_QR.ipynb
+++ b/week_2_Householder_QR.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -48,10 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def householder(vec):\n",
@@ -72,8 +68,12 @@
     "    vec = np.asarray(vec, dtype=float)\n",
     "    if vec.ndim != 1:\n",
     "        raise ValueError(\"vec.ndim = %s, expected 1\" % vec.ndim)\n",
-    "    \n",
-    "    # ... ENTER YOUR CODE HERE ..."
+    "    y = np.zeros(vec.shape[0])\n",
+    "    y[0] = np.linalg.norm(vec)\n",
+    "    u = (vec - y)/np.linalg.norm(vec - y)\n",
+    "    H = np.eye(vec.shape[0]) - 2 * np.outer(u,u)\n",
+    "    outvec = y\n",
+    "    return outvec, H"
    ]
   },
   {
@@ -85,27 +85,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "[[ 0.26726124  0.53452248  0.80178373]\n [ 0.53452248  0.61007346 -0.5848898 ]\n [ 0.80178373 -0.5848898   0.12266529]]\n"
+    }
+   ],
    "source": [
     "# Test I.1 (10% of the total grade).\n",
     "\n",
     "v = np.array([1, 2, 3])\n",
     "v1, h = householder(v)\n",
+    "print(h)\n",
     "\n",
-    "assert_allclose(np.dot(h, v1), v)\n",
-    "assert_allclose(np.dot(h, v), v1)"
+    "assert_allclose(np.dot(h, v1), v, atol = 1e-15)\n",
+    "assert_allclose(np.dot(h, v), v1, atol = 1e-15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 44,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Test I.2 (10% of the total grade).\n",
@@ -115,7 +118,7 @@
     "vec = rndm.uniform(size=7)\n",
     "v1, h = householder(vec)\n",
     "\n",
-    "assert_allclose(np.dot(h, v1), vec)"
+    "assert_allclose(np.dot(h, v1), vec, atol = 1e-10)"
    ]
   },
   {
@@ -170,10 +173,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 302,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def qr_decomp(a):\n",
@@ -199,17 +200,34 @@
     "    \n",
     "    \"\"\"\n",
     "    a1 = np.array(a, copy=True, dtype=float)\n",
-    "    m, n = a1.shape\n",
-    "    \n",
-    "    # ... ENTER YOUR CODE HERE ..."
+    "    m, n = a.shape\n",
+    "    q = np.eye(m)\n",
+    "    a1_ = a1.copy()\n",
+    "    vec = np.array([])\n",
+    "    k = 0\n",
+    "    j = 0\n",
+    "    while j < min(n,m-1):\n",
+    "        k += 1\n",
+    "        H_ = np.eye(m)\n",
+    "        vec = a1[:,0]\n",
+    "        vec_, H = householder(vec)\n",
+    "        H_[j:,j:] = H\n",
+    "        a1_ = H_ @ a1_\n",
+    "        q = q @ H_.T\n",
+    "         \n",
+    "        a1 = a1_[j+1:,j+1:]\n",
+    "        j+=1\n",
+    "        print(a1_)\n",
+    "    return q, a1_\n",
+    "\n",
+    "        \n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 303,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Might want to turn this on for prettier printing: zeros instead of `1e-16` etc\n",
@@ -219,11 +237,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 304,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "[[ 1.40152769  1.2514379   0.89523615]\n [ 0.          0.37150831 -0.02435426]\n [ 0.          0.65808224  0.85360724]\n [ 0.         -0.09775808  0.16980189]\n [ 0.          0.35723078  0.11183099]]\n[[ 1.40152769  1.2514379   0.89523615]\n [ 0.          0.84158252  0.68447942]\n [ 0.          0.         -0.13872729]\n [ 0.         -0.          0.31721312]\n [ 0.          0.         -0.42684399]]\n[[ 1.40152769  1.2514379   0.89523615]\n [ 0.          0.84158252  0.68447942]\n [ 0.         -0.          0.5496046 ]\n [ 0.          0.          0.        ]\n [ 0.         -0.         -0.        ]]\n"
+    }
+   ],
    "source": [
     "# Test II.1 (20% of the total grade)\n",
     "\n",
@@ -247,16 +269,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 306,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "\nNot equal to tolerance rtol=1e-07, atol=0\n\nMismatch: 80%\nMax absolute difference: 1.24996836\nMax relative difference: 2.66316363\n x: array([[ 0.13665 ,  0.536013, -0.093698,  0.769714,  0.304596],\n       [ 0.560359,  0.09354 , -0.533269,  0.018395, -0.626525],\n       [ 0.197259,  0.659489,  0.600685, -0.323847, -0.245895],...\n y: array([[-0.13665 ,  0.536013,  0.093698,  0.661619, -0.497491],\n       [-0.560359,  0.09354 ,  0.533269, -0.524772, -0.342763],\n       [-0.197259,  0.659489, -0.600685, -0.37879 ,  0.147848],...",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-306-d77be3590bfa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0massert_allclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0massert_allclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0massert_allclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/numpy/testing/_private/utils.py\u001b[0m in \u001b[0;36massert_allclose\u001b[0;34m(actual, desired, rtol, atol, equal_nan, err_msg, verbose)\u001b[0m\n\u001b[1;32m   1513\u001b[0m     \u001b[0mheader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Not equal to tolerance rtol=%g, atol=%g'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mrtol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1514\u001b[0m     assert_array_compare(compare, actual, desired, err_msg=str(err_msg),\n\u001b[0;32m-> 1515\u001b[0;31m                          verbose=verbose, header=header, equal_nan=equal_nan)\n\u001b[0m\u001b[1;32m   1516\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1517\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/numpy/testing/_private/utils.py\u001b[0m in \u001b[0;36massert_array_compare\u001b[0;34m(comparison, x, y, err_msg, verbose, header, precision, equal_nan, equal_inf)\u001b[0m\n\u001b[1;32m    839\u001b[0m                                 \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mheader\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    840\u001b[0m                                 names=('x', 'y'), precision=precision)\n\u001b[0;32m--> 841\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mAssertionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    842\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    843\u001b[0m         \u001b[0;32mimport\u001b[0m \u001b[0mtraceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: \nNot equal to tolerance rtol=1e-07, atol=0\n\nMismatch: 80%\nMax absolute difference: 1.24996836\nMax relative difference: 2.66316363\n x: array([[ 0.13665 ,  0.536013, -0.093698,  0.769714,  0.304596],\n       [ 0.560359,  0.09354 , -0.533269,  0.018395, -0.626525],\n       [ 0.197259,  0.659489,  0.600685, -0.323847, -0.245895],...\n y: array([[-0.13665 ,  0.536013,  0.093698,  0.661619, -0.497491],\n       [-0.560359,  0.09354 ,  0.533269, -0.524772, -0.342763],\n       [-0.197259,  0.659489, -0.600685, -0.37879 ,  0.147848],..."
+     ]
+    }
+   ],
    "source": [
     "from scipy.linalg import qr\n",
     "qq, rr = qr(a)\n",
     "\n",
-    "assert_allclose(np.dot(qq, rr), a)"
+    "assert_allclose(np.dot(qq, rr), a)\n",
+    "assert_allclose(q, qq)\n",
+    "assert_allclose(r, rr)"
    ]
   },
   {
@@ -334,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
