--- a/week_2_Householder_QR.ipynb
+++ b/week_2_Householder_QR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 578,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 579,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 580,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 581,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 582,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,12 +212,13 @@
     "        H = np.asarray(np.bmat([[np.eye(i), zeros_h], [zeros_h.T, H_temp]]))\n",
     "        a1 = H @ a1\n",
     "        Q = Q @ H.T\n",
+    "        #print('H:' + str(H))\n",
     "    return Q, a1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 583,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 584,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 585,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 586,
    "metadata": {},
    "outputs": [
     {
@@ -290,15 +291,15 @@
     }
    ],
    "source": [
-    "print(q - qq)\n",
-    "print(r - rr)"
+    "print(q - qq)   # Q - посчитано нами, QQ - посчитано SciPy\n",
+    "print(r - rr)   # R - посчитано нами, RR - посчитано SciPy"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Enter your explanation here* (10% of the total grade, peer-graded)"
+    "В нашем случае матрица получается не единственной. Для единственности необходимо наложить на R дополнительные условия, т.к. при создании вектора u он забывает про фазу."
    ]
   },
   {
@@ -341,11 +342,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 587,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#   All of the following is the creation of Gram-Schmidt algorithm for decomposition. Seems not to be necessary lmao :c\n",
+    "def reflection(a):\n",
+    "    a1 = np.array(a, copy=True, dtype=float)\n",
+    "    m, n = a1.shape\n",
+    "    refl_array = []\n",
+    "    for i in range(min(m-1, n)):\n",
+    "        vec = a1[i:, i]  # Вектор, с которым будем работать в этой итерации\n",
+    "        refl = np.zeros(m)\n",
+    "        y = np.zeros(vec.size)\n",
+    "        y[0] = np.linalg.norm(vec)\n",
+    "        refl[i:] = (vec - y) / np.linalg.norm(vec - y) # Строим вектор\n",
+    "        a1 = a1 - 2 * np.outer(refl, (refl @ a1))\n",
+    "        refl_array.append(refl)\n",
+    "    return a1, refl_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 588,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiplication(a, vecs):\n",
+    "    a1 = np.array(a, copy=True, dtype=float)\n",
+    "    for vector in vecs:\n",
+    "        a1 = a1 - 2 * np.outer(vector, (vector @ a1))\n",
+    "    return a1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 589,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#   Tests\n",
+    "\n",
+    "a = np.random.uniform(size=(5, 3))\n",
+    "b = np.random.uniform(size=(5, 3))\n",
+    "\n",
+    "Q, R = qr_decomp(b)\n",
+    "\n",
+    "reflected, vec_array = reflection(b)\n",
+    "\n",
+    "\n",
+    "assert_allclose(multiplication(b, vec_array), reflected)\n",
+    "assert_allclose(multiplication(a, vec_array), Q.T@a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Далее идет в целом бессмысленная (но беспощадная) реализация алгоритма Грама-Шмидта."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 590,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#   All of the following is the creation of Gram-Schmidt algorithm for decomposition.\n",
+    "#   Seems not to be necessary lmao :c\n",
     "def projection(vec, u):\n",
     "    if (vec.ndim != 1) or (u.ndim != 1):\n",
     "        raise ValueError(\"vec.ndim = %s, expected 1\" % vec.ndim)\n",
@@ -354,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 591,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +426,7 @@
     "    docstrings r for losers\n",
     "    '''\n",
     "    a = np.array(a1, copy=True, dtype=float)\n",
-    "    n, m = a.shape  #   n is for nof rows, m iis for nof cols\n",
+    "    n, m = a.shape  #   n is for nof rows, m is for nof cols\n",
     "    eigen_vecs = []\n",
     "    a_array = []\n",
     "    for i in range(m):\n",
@@ -391,11 +454,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 592,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test III.1\n",
+    "# Test III.2\n",
     "\n",
     "rndm = np.random.RandomState(1234)\n",
     "a = rndm.uniform(size=(5, 3))\n",
@@ -404,8 +467,7 @@
     "q, r = gmsh(a)\n",
     "\n",
     "# test the decomposition itself\n",
-    "assert_allclose(np.dot(q, r), a, atol=1e-10)\n",
-    ""
+    "assert_allclose(np.dot(q, r), a, atol=1e-10)\n"
    ]
   },
   {
