--- a/week_5_intep_approx.ipynb
+++ b/week_5_intep_approx.ipynb
@@ -55,7 +55,8 @@
    },
    "outputs": [],
    "source": [
-    "# ... ENTER YOUR CODE HERE"
+    "def least_sqares(x, y, f):\n",
+    "    "
    ]
   },
   {
