--- a/week_2_Householder_QR.ipynb
+++ b/week_2_Householder_QR.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -14,102 +12,42 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Part I. Construct a Householder reflection of a vector."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Given a vector $\\mathbf{x}$, and a plane with a normal vector $\\mathbf{u}$, the Householder transformation reflects $\\mathbf{x}$ about the plane.\n",
-    "\n",
-    "The matrix of the Householder transformation is\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{H} = \\mathbf{1} - 2 \\mathbf{u} \\mathbf{u}^T\n",
-    "$$\n",
-    "\n",
-    "Given two equal-length vectors $\\mathbf{x}$ and $\\mathbf{y}$, a rotation which brings $\\mathbf{x}$ to $\\mathbf{y}$ is a Householder transform with\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{u} = \\frac{\\mathbf{x} - \\mathbf{y}}{\\left|\\mathbf{x} - \\mathbf{y}\\right|}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Write a function which rotates a given vector, $\\mathbf{x} = (x_1, \\dots, x_n)$ into $\\mathbf{y} = (\\left|\\mathbf{x}\\right|, 0, \\dots, 0)^T$ using a Householder transformation."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def householder(vec):\n",
-    "    \"\"\"Construct a Householder reflection to zero out 2nd and further components of a vector.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    vec : array-like of floats, shape (n,)\n",
-    "        Input vector\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    outvec : array of floats, shape (n,)\n",
-    "        Transformed vector, with ``outvec[1:]==0`` and ``|outvec| == |vec|``\n",
-    "    H : array of floats, shape (n, n)\n",
-    "        Orthogonal matrix of the Householder reflection\n",
-    "    \"\"\"\n",
     "    vec = np.asarray(vec, dtype=float)\n",
-    "    if vec.ndim != 1:\n",
-    "        raise ValueError(\"vec.ndim = %s, expected 1\" % vec.ndim)\n",
-    "    \n",
-    "    # ... ENTER YOUR CODE HERE ..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Test your function using tests below:"
+    "    if len(vec) <= 1:\n",
+    "        return vec, np.eye(len(vec))\n",
+    "    #просто последовательно реализуем алгоритм\n",
+    "    n = len(vec)\n",
+    "    outvec = np.zeros(n)\n",
+    "    outvec[0] = np.linalg.norm(vec)\n",
+    "    u = (vec - outvec) / np.linalg.norm(vec - outvec)\n",
+    "    H = np.eye(n) - 2 * u.reshape(n,1) @ u.reshape(1,n)\n",
+    "    return outvec, H"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Test I.1 (10% of the total grade).\n",
-    "\n",
     "v = np.array([1, 2, 3])\n",
     "v1, h = householder(v)\n",
-    "\n",
     "assert_allclose(np.dot(h, v1), v)\n",
-    "assert_allclose(np.dot(h, v), v1)"
+    "assert_allclose(np.dot(h, v), v1, atol = 1e-10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Test I.2 (10% of the total grade).\n",
-    "\n",
     "rndm = np.random.RandomState(1234)\n",
     "\n",
     "vec = rndm.uniform(size=7)\n",
@@ -119,138 +57,58 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Part II. Compute the $\\mathrm{QR}$ decomposition of a matrix.\n",
-    "\n",
-    "Given a rectangular $m\\times n$ matrix $\\mathbf{A}$, construct a Householder reflector matrix $\\mathbf{H}_1$ which transforms the first column of $\\mathbf{A}$ (and call the result $\\mathbf{A}^{(1)}$)\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{H}_1 \\mathbf{A} =%\n",
-    "\\begin{pmatrix}\n",
-    "\\times & \\times & \\times & \\dots & \\times \\\\\n",
-    "0      & \\times & \\times & \\dots & \\times \\\\\n",
-    "0      & \\times & \\times & \\dots & \\times \\\\\n",
-    "&& \\dots&& \\\\\n",
-    "0      & \\times & \\times & \\dots & \\times \\\\\n",
-    "\\end{pmatrix}%\n",
-    "\\equiv \\mathbf{A}^{(1)}\\;.\n",
-    "$$\n",
-    "\n",
-    "Now consider the lower-right submatrix of $\\mathbf{A}^{(1)}$, and construct a Householder reflector which annihilates the second column of $\\mathbf{A}$:\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{H}_2 \\mathbf{A}^{(1)} =%\n",
-    "\\begin{pmatrix}\n",
-    "\\times & \\times & \\times & \\dots & \\times \\\\\n",
-    "0      & \\times & \\times & \\dots & \\times \\\\\n",
-    "0      & 0      & \\times & \\dots & \\times \\\\\n",
-    "&& \\dots&& \\\\\n",
-    "0      & 0      & \\times & \\dots & \\times \\\\\n",
-    "\\end{pmatrix}%\n",
-    "\\equiv \\mathbf{A}^{(2)} \\;.\n",
-    "$$\n",
-    "\n",
-    "Repeating the process $n-1$ times, we obtain\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{H}_{n-1} \\cdots \\mathbf{H}_2 \\mathbf{H}_1 \\mathbf{A} = \\mathbf{R} \\;,\n",
-    "$$\n",
-    "\n",
-    "with $\\mathbf{R}$ an upper triangular matrix. Since each $\\mathbf{H}_k$ is orthogonal, so is their product. The inverse of an orthogonal matrix is orthogonal. Hence the process generates the $\\mathrm{QR}$ decomposition of $\\mathbf{A}$. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Write a function, which receives a recangular matrix, $A$, and returns the Q and R factors of the $QR$ factorization of $A$."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def qr_decomp(a):\n",
-    "    \"\"\"Compute the QR decomposition of a matrix.\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    a : ndarray, shape(m, n)\n",
-    "        The input matrix\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    q : ndarray, shape(m, m)\n",
-    "        The orthogonal matrix\n",
-    "    r : ndarray, shape(m, n)\n",
-    "        The upper triangular matrix\n",
-    "        \n",
-    "    Examples\n",
-    "    --------\n",
-    "    >>> a = np.random.random(size=(3, 5))\n",
-    "    >>> q, r = qr_decomp(a)\n",
-    "    >>> np.assert_allclose(np.dot(q, r), a)\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    a1 = np.array(a, copy=True, dtype=float)\n",
-    "    m, n = a1.shape\n",
-    "    \n",
-    "    # ... ENTER YOUR CODE HERE ..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Might want to turn this on for prettier printing: zeros instead of `1e-16` etc\n",
     "\n",
-    "np.set_printoptions(suppress=True)"
+    "    A = np.array(a, copy=True, dtype=float)\n",
+    "    m, n = A.shape\n",
+    "    \n",
+    "    H = np.eye(m) #матрица, которая будет \"запоминать\" все преобразования\n",
+    "    Ai, h = householder(A[:,0]) #Ai никак не будет использоваться, нужен только потому что householder возвращает два значения\n",
+    "    A = h @ A\n",
+    "    H = h @ H\n",
+    "    for i in range(1,n):\n",
+    "        Ai, h = householder(A[i:,i]) #ищем Хаусхолдер для среза из поддиагональных и диагональных элементов для каждого столбца\n",
+    "        \n",
+    "        #собираем матрицу из Хаусхолдера\n",
+    "        I = np.eye(i)              #единичная верхний левый угол\n",
+    "        hr = np.zeros((i,m-i))     #матрица нулей верхний правый угол\n",
+    "        bl = np.zeros((m-i,i))     #матрица нулей нжний правый угол\n",
+    "        top = np.hstack((I,hr))    #верхняя часть\n",
+    "        bot = np.hstack((bl,h))    #нижняя\n",
+    "        \n",
+    "        E = np.vstack((top,bot))   #наша матрица накенец получена!!!\n",
+    "        H = H @ E\n",
+    "        A = E @ A\n",
+    "  \n",
+    "    return H, A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Test II.1 (20% of the total grade)\n",
+    "np.set_printoptions(suppress=True)\n",
     "\n",
     "rndm = np.random.RandomState(1234)\n",
     "a = rndm.uniform(size=(5, 3))\n",
     "q, r = qr_decomp(a)\n",
     "\n",
-    "# test that Q is indeed orthogonal\n",
     "assert_allclose(np.dot(q, q.T), np.eye(5), atol=1e-10)\n",
     "\n",
-    "# test the decomposition itself\n",
     "assert_allclose(np.dot(q, r), a)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now compare your decompositions to the library function (which actually wraps the corresponding LAPACK functions)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.linalg import qr\n",
@@ -260,60 +118,192 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.40152769  1.2514379   0.89523615]\n",
+      " [ 0.          0.84158252  0.68447942]\n",
+      " [ 0.         -0.          0.5496046 ]\n",
+      " [ 0.          0.          0.        ]\n",
+      " [ 0.         -0.         -0.        ]]\n",
+      "----\n",
+      "[[-1.40152769 -1.2514379  -0.89523615]\n",
+      " [ 0.          0.84158252  0.68447942]\n",
+      " [ 0.          0.         -0.5496046 ]\n",
+      " [ 0.          0.          0.        ]\n",
+      " [ 0.          0.          0.        ]]\n",
+      "-------------------------------\n",
+      "[[ 0.13665049  0.53601299 -0.09369752  0.7697136   0.30459557]\n",
+      " [ 0.56035895  0.0935397  -0.53326881  0.01839528 -0.62652547]\n",
+      " [ 0.19725922  0.65948912  0.60068463 -0.32384673 -0.24589462]\n",
+      " [ 0.62498418 -0.50418303  0.52144688  0.28453698  0.04822969]\n",
+      " [ 0.48765568  0.12171264 -0.27224305 -0.47049398  0.67223293]]\n",
+      "----\n",
+      "[[-0.13665049  0.53601299  0.09369752  0.661619   -0.49749149]\n",
+      " [-0.56035895  0.0935397   0.53326881 -0.52477245 -0.34276292]\n",
+      " [-0.19725922  0.65948912 -0.60068463 -0.37879015  0.14784752]\n",
+      " [-0.62498418 -0.50418303 -0.52144688  0.18967657 -0.21750907]\n",
+      " [-0.48765568  0.12171264  0.27224305  0.32774225  0.75222783]]\n"
+     ]
+    }
+   ],
    "source": [
-    "Check if your `q` and `r` agree with `qq` and `rr`. Explain."
+    "print(r)\n",
+    "print(\"----\")\n",
+    "print(rr)\n",
+    "print(\"-------------------------------\")\n",
+    "print(q)\n",
+    "print(\"----\")\n",
+    "print(qq)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Enter your explanation here* (10% of the total grade, peer-graded)"
+    "мы использовали Хаусхолдер, который выдавал модули векторов, поэтому у нас везде положительные значения, во втроенном в итоговых значениях r появлялись отрицательные"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part III. Avoid forming Householder matrices explicitly."
+    "Part III. Avoid forming Householder matrices explicitly."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Note the special structure of the Householder matrices: A reflector $\\mathbf{H}$ is completely specified by a reflection vector $\\mathbf{u}$. Also note that the computational cost of applying a reflector to a matrix strongly depends on the order of operations:\n",
-    "\n",
-    "$$\n",
-    "\\left( \\mathbf{u} \\mathbf{u}^T \\right) \\mathbf{A}  \\qquad \\textrm{is } O(m^2 n)\\;,\n",
-    "$$\n",
-    "while\n",
-    "$$\n",
-    "\\mathbf{u} \\left( \\mathbf{u}^T \\mathbf{A} \\right) \\qquad \\textrm{is } O(mn)\n",
-    "$$\n",
-    "\n",
-    "Thus, it seems to make sense to *avoid* forming the $\\mathbf{H}$ matrices. Instead, one stores the reflection vectors, $\\mathbf{u}$, themselves, and provides a way of multiplying an arbitrary matrix by $\\mathbf{Q}^T$, e.g., as a standalone function (or a class)."
+    "def ur_decomp(a):\n",
+    "    \n",
+    "    def by_u(vec):   #функция поиска вектора u\n",
+    "        n = len(vec)\n",
+    "        outvec = np.zeros(n)\n",
+    "        outvec[0] = np.linalg.norm(vec)\n",
+    "        u = (vec - outvec) / np.linalg.norm(vec - outvec)\n",
+    "        return u\n",
+    "       \n",
+    "    A = np.array(a, copy=True, dtype=float)\n",
+    "    m, n = np.shape(A)\n",
+    "    U = []  #здесь будем хранить все u\n",
+    "    U.append(by_u(A[0:,0]))\n",
+    "    v = np.array(U[0])\n",
+    "    A = A - 2*v.reshape(len(v),1)@(v.reshape(1,len(v))@A)    #считаем на следующем шаге матрицу A\n",
+    "    stop = min(n,m)\n",
+    "    for i in range(1,stop):\n",
+    "        U.append(np.hstack((np.zeros(i),by_u(A[i:,i]))))    #добавляем веткора u, сразу удлинняя их\n",
+    "        v = np.array(U[i])\n",
+    "        A = A - 2*v.reshape(len(v),1)@(v.reshape(1,len(v))@A)\n",
+    "    return U, A"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Write a function which constructs the `QR` decomposition of a matrix *without ever forming the* $\\mathbf{H}$ matrices, and returns the $\\mathbf{R}$ matrix and reflection vectors. \n",
-    "\n",
-    "Write a second function, which uses reflection vectors to multiply a matrix with $\\mathbf{Q}^T$. Make sure to include enough comments for a marker to follow your implementation, and add tests. \n",
-    "\n",
-    "(Peer-graded, 40% of the total grade)"
+    "def build_from_u(u, a):\n",
+    "    n = len(u)       #число столбцов (количество u)\n",
+    "    m = len(u[0])    #число строк (длина u)\n",
+    "    for i in range(n-1,-1,-1):\n",
+    "        a = a - 2 * u[i].reshape(m,1)@(u[i].reshape(1,m)@a)\n",
+    "    return a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u, r = ur_decomp(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  0.  0.]\n",
+      " [-0.  0.  0.]\n",
+      " [ 0. -0. -0.]\n",
+      " [-0.  0. -0.]\n",
+      " [ 0. -0. -0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(build_from_u(u,r)-a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[   0.    1.    4. ... 4489. 4624. 4761.]\n",
+      " [   3.    5.    9. ... 4559. 4695. 4833.]\n",
+      " [   6.    9.   14. ... 4629. 4766. 4905.]\n",
+      " ...\n",
+      " [ 168.  225.  284. ... 8409. 8600. 8793.]\n",
+      " [ 171.  229.  289. ... 8479. 8671. 8865.]\n",
+      " [ 174.  233.  294. ... 8549. 8742. 8937.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "monster = np.zeros((59,70))\n",
+    "for i in range(len(monster)):\n",
+    "    for j in range(len(monster[0])):\n",
+    "        monster[i][j] = i + i*(j+2) +j**2\n",
+    "print(monster)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  0. -0. ...  0.  0. -0.]\n",
+      " [-0. -0. -0. ... -0. -0. -0.]\n",
+      " [-0. -0.  0. ...  0.  0.  0.]\n",
+      " ...\n",
+      " [-0. -0.  0. ... -0. -0.  0.]\n",
+      " [-0. -0.  0. ... -0. -0.  0.]\n",
+      " [-0. -0.  0. ... -0. -0.  0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mu, mr = ur_decomp(monster)\n",
+    "print(build_from_u(mu,mr)-monster)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -334,9 +324,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
